# pacman

./: CMakeLists.txt
src/: main.c
src/pacman_logic/: pacman.c  pacman.h
